# my-cnn

./: README.md  andys-cnn.ipynb  pyproject.toml
