[tool.poetry]
name = "my-cnn"
version = "0.1.0"
description = ""
authors = ["Doc Drew <docdrew@umich.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.1"
opencv-python = "^4.5.5"
tqdm = "^4.63.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
